# SnakeGame-CPP

./: CMakeLists.txt  README.md
include/: Game.h  Grid.h  Player.h
include/Utils/: Enums.h  Globals.h  Numbers.h  Redefinitions.h
include/raylib-cpp/: Camera2D.hpp  Vector2.hpp
src/: Game.cpp  Grid.cpp  Player.cpp  main.cpp
src/Utils/: Numbers.cpp  Redefinitions.cpp
